deployment/example-workload/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sample-ingress
spec:
  rules:
  - host: nginx.local
    http:
      paths:
      - backend:
          serviceName: nginx-node02 
          servicePort: 80
  - host: kuard.local
    http:
      paths:
      - backend:
          serviceName: kuard-node02
          servicePort: 80
