deployment/example-workload/route.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: kuard
  name: kuard
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kuard
  template:
    metadata:
      labels:
        app: kuard
    spec:
      containers:
      - image: gcr.io/kuar-demo/kuard-amd64:1
        name: kuard
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kuard
  name: kuard
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: kuard
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx
        name: nginx
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: kuard
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: contour.heptio.com/v1alpha1
kind: Route
metadata: 
  name: sample-route-kuard
spec: 
  host: kuard.local
  routes: 
    - pathPrefix: /
      upstreams: 
        - serviceName: kuard
          servicePort: 80
---
apiVersion: contour.heptio.com/v1alpha1
kind: Route
metadata: 
  name: sample-route-nginx
spec: 
  host: nginx.local
  routes: 
    - pathPrefix: /
      upstreams: 
        - serviceName: nginx
          servicePort: 80
---
apiVersion: contour.heptio.com/v1alpha1
kind: Route
metadata: 
  name: sample-route-both
spec: 
  host: both.local
  routes: 
    - pathPrefix: /
      upstreams: 
        - serviceName: nginx
          servicePort: 80
        - serviceName: kuard
          servicePort: 80
